# a_ci

./: flake.nix
service/: Cargo.toml  rust-toolchain
service/src/: main.rs
service/src/lib/: mod.rs  outbound.rs
service/src/lib/domain/: ci.rs
service/src/lib/domain/ci/: base_service.rs  interface.rs
service/src/lib/domain/ci/models/: repo.rs
service/src/lib/inbound/: http.rs
service/src/lib/inbound/http/: handlers.rs
service/src/lib/outbound/: resource.rs
service/src/lib/outbound/db_custom/: mod.rs  write_set.rs
ui/: .gitignore  package.json
ui/src/layouts/: BaseLayout.astro
ui/src/pages/: index.astro
ui/src/styles/: global.css
