[package]
name = "a_ci"
edition = "2024"

[[bin]]
name = "a_ci_bin"
path = "src/main.rs"

[lib]
name = "a_ci_lib"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.6.9", features = ["headers"] }
bincode = "2.0.1"
dotenv = "0.15.0"
facet = { version = "0.31.3", features = ["reflect"] }
field_types = "1.1.0"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.4.0", features = ["cors"] }
